--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "railway-runbooks",
+  "name": "railway-jobs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,12 +7,13 @@
     "build": "next build --experimental-build-mode compile",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen"
+    "test": "vitest"
   },
   "dependencies": {
     "@sindresorhus/slugify": "^2.2.1",
     "graphql": "^16.11.0",
     "graphql-request": "^7.1.2",
+    "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "next-safe-action": "^7.10.8",
     "react": "^19.0.0",
@@ -23,19 +24,34 @@
   },
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "plugins": [
+      "prettier-plugin-tailwindcss",
+      "prettier-plugin-classnames",
+      "prettier-plugin-merge"
+    ]
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
+    "prettier-plugin-classnames": "^0.7.8",
+    "prettier-plugin-merge": "^0.7.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.3"
   },
   "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
