Remove requirement to put behind authenticated proxy

--- a/.env
+++ b/.env
@@ -9,3 +9,9 @@ RAILWAY_API_TOKEN=
 
 # Repo to checkout where your `scripts/Dockerfile` and job scripts are defined in
 JOBS_REPO=
+
+# Username for basic auth
+AUTH_USER=
+
+# Password for basic auth
+AUTH_PASS=
